--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ version: 1.0.0+1
 environment:
   sdk: ^3.6.0
 dependencies:
+  webview_flutter: ^4.0.0
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
